// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Information should render correctly with a custom backgroundColor 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #45d6b5;
  border-radius: 4px;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with a custom color 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #45d6b5;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with an heading 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
  font-weight: 500;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        Bonjour
      </p>
      <p
        class="emotion-3"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with an icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  fill: #45d6b5;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-1.emotion-1 {
  margin-right: 16px;
}

.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

<div
    class="emotion-0"
  >
    <svg
      class="sc-ui-icon emotion-1"
      viewBox="0 0 24 24"
    >
      <path
        d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
      />
    </svg>
    <div
      class="emotion-2"
    >
      <p
        class="emotion-3"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with an image 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1.emotion-1 {
  width: 24px;
  height: 24px;
  margin-right: 24px;
}

.emotion-2.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

<div
    class="emotion-0"
  >
    <img
      class="emotion-1"
      src="//img.jpg"
    />
    <div
      class="emotion-2"
    >
      <p
        class="emotion-3"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Information should render correctly with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #fff;
  border-radius: 4px;
}

.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 24px;
  padding-left: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #4f0599;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2"
      >
        Hello
      </p>
    </div>
  </div>
</DocumentFragment>
`;
